Fix attempt turnstile

--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
       <p>
         © 2025 Riser. All rights reserved.
       </p>
-
+      
+      <div id="cf-turnstile-widget"></div>
+      
       <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
       <script type="module" src="index.js"></script>
   </body>
