trying html fix

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
 <!-- Cloudflare Turnstile -->
-    <div class="cf-turnstile"
+    <div class="cf-turnstile-widget"
      data-sitekey="0x4AAAAAABtmpRNrSpmvCfAy"
      data-theme="light" 
      data-size="normal"  
@@ -147,8 +147,7 @@
       <p>
         © 2025 Riser. All rights reserved.
       </p>
-      
-      <div id="cf-turnstile-widget"></div>
+
       
       <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
       <script type="module" src="index.js"></script>
