--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
 <!-- Cloudflare Turnstile -->
-    <div class="cf-turnstile-widget"
+    <div class="cf-turnstile"
      data-sitekey="0x4AAAAAABtmpRNrSpmvCfAy"
      data-theme="light" 
      data-size="normal"  
