Again trying html fix -- cloudfare is a piece of shit

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </p>
 
       
-      <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
-      <script type="module" src="index.js"></script>
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
