--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Playwrite+HU:wght@100..400&display=swap"
       rel="stylesheet"
     />
-    <title>Riser — Waitlist</title>
+    <title>Riser —  The Ultimate shortcut for Windows</title>
   </head>
   <body>
     <div id="error-alert" style="display: none"></div>
