Finalized everything, Green Light for Launch

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         >
       </h1>
       <p class="passage">
-        The command hub with powerful shortcuts, blazing fast search results,
-        and tools to launch, control, and execute anything — all from your
+        The command hub with powerful shortcuts,&nbsp;blazing fast search results,&nbsp;and
+         tools to launch,&nbsp;control,&nbsp;and execute anything — all from your
         keyboard.
       </p>
       <div class="input-button-group">
@@ -55,12 +55,12 @@
         alt="app-screenshot"
       />
       <p style="text-align: center; font-size: 0.8rem; color: #888">
-        This is a concept of the app, the final design may vary.
+        This is a concept of the app,&nbsp;the final design may vary.
       </p>
     </div>
     <!-- Features -->
     <section class="features">
-      <h2 class="features-title">Windows, but effortless</h2>
+      <h2 class="features-title">Windows,&nbsp;but Effortless</h2>
       <p class="features-subtitle">
         Riser combines powerful utilities and thoughtful design into a minimal
         all in one tool that elevates your workflow.
@@ -73,8 +73,8 @@
           </div>
           <h3>Blazing Fast Search</h3>
           <p>
-            Find files, apps, and commands in milliseconds. Riser indexes your
-            system locally for instant, offline access to everything you need.
+            Find files,&nbsp;apps,&nbsp;and commands in milliseconds.&nbsp;Riser indexes your
+            system locally for instant,&nbsp;offline access to everything you need.
           </p>
         </div>
 
@@ -84,8 +84,8 @@
           </div>
           <h3>Powerful Shortcuts</h3>
           <p>
-            “Create powerful custom shortcuts that launch apps, switch workspaces,
-             or control your system— all with a single key combination.”
+            “Create powerful custom shortcuts that launch apps,&nbsp;switch workspaces,
+             or control your system — all with a single key combination.”
           </p>
         </div>
 
@@ -95,9 +95,8 @@
           </div>
           <h3>Workspace Launcher</h3>
           <p>
-            Set up and launch your entire work environment or your project — apps, folders, and
-            websites — with a single, custom command. Perfect for context
-            switching.
+            Set up and launch your entire project and work environment — including apps,&nbsp;folders,&nbsp;and websites
+             with a single custom command.&nbsp;Jump between tasks without losing time or focus.
           </p>
         </div>
 
@@ -107,8 +106,8 @@
           </div>
           <h3>System Integration</h3>
           <p>
-            Instantly control your microphone, camera, audio sources, and other
-            general system   settings. Riser puts all your essential controls
+            Instantly control your microphone,&nbsp;camera,&nbsp;audio sources,&nbsp;and other
+            general system&nbsp;settings.&nbsp;Riser puts all your essential controls
             — just like a Stream Deck.
           </p>
         </div>
@@ -119,8 +118,8 @@
           </div>
           <h3>Offline & Private</h3>
           <p>
-            Runs entirely on your machine. No cloud, no tracking, no data
-            collection. Your data always stays yours.
+            Runs entirely on your machine.&nbsp;No cloud,&nbsp;no tracking,&nbsp;no data
+            collection.&nbsp;Your data always stays yours.
           </p>
         </div>
       </div>
