Finalized everything, Green Light for Launch

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </div>
           <h3>Workspace Launcher</h3>
           <p>
-            Set up and launch your entire project and work environment — including apps,&nbsp;folders,&nbsp;and websites
+            Set up and launch your entire projects and work environment — including apps,&nbsp;folders,&nbsp;and websites
              with a single custom command.&nbsp;Jump between tasks without losing time or focus.
           </p>
         </div>
